2007-02-03  Dalibor Topic  <robilad@kaffe.org>

	* config.h.in, configure: Regenerated.

	* configure.ac: Removed checks for type-widths.
	Added checks for fixed size types.

	* jartool.h: Use fixed size types to define u1, 
	u2 and u4. Include inttypes.h and stdint.h if 
	necessary. Guard the config.h include. Don't
	include sys/types.h.

2007-02-03  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Use AC_CHECK_HEADERS_ONCE instead
	of AC_CHECK_HEADERS. Use AC_CHECK_FUNCS_ONCE instead
	of AC_CHECK_FUNCS.

	* configure: Regenerated.

2007-02-03  Dalibor Topic  <robilad@kaffe.org>

	* compile, texinfo.tex: Added new generated files.

	* INSTALL, Makefile.in, aclocal.m4, config.h.in, 
	configure, depcomp, install-sh, missing: Regenerated.

	* acinclude.m4, configure.ac: Autoupdated with 
	autoconf 2.61.

	* autogen.sh: Use autoreconf.

2007-02-03  Dalibor Topic  <robilad@kaffe.org>

	* .cvsignore: Added new file.

2007-02-03  Dalibor Topic  <robilad@kaffe.org>

	* README: Updated e-mail addresses, home pages,
	added section headers, and a history section, and 
	cleaned up.

2007-02-03  Dalibor Topic  <robilad@kaffe.org>

	* jartool.h [__GNUC__]: Only define __attribute__
	if it is not already defined. That fixes the build 
	with tcc.

2007-02-03  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (list_jar): Added missing casts to fix
	compiler warnings on Debian Sarge.

2006-08-07  Richard Guenther  <rguenther@suse.de>

	* jartool.c (extract_jar): Fix directory traversal fix,
	handle "." path components.

2006-07-12  Richard Guenther  <rguenther@suse.de>

	* jartool.c (extract_jar): Do not allow directory traversal
	to parents of the extraction root.

2006-05-27  Richard Guenther  <rguenther@suse.de>

	* fastjar.texi: Don't use gcc-vers.texi.
	* Makefile.am: Don't generate it.
	* Makefile.in: Re-generate.

2006-05-27  Richard Guenther  <rguenther@suse.de>

	* fastjar.texi: Pull in the only macro we need from
	gcc-common.texi.
