@@ -1,79 +1,3 @@
-/* $Id: compress.c,v 1.1 2006/04/17 18:44:35 tromey Exp $
-
-   $Log: compress.c,v $
-   Revision 1.1  2006/04/17 18:44:35  tromey
-   Initial revision
-
-   Revision 1.2  2000/12/14 18:45:35  ghazi
-   Warning fixes:
-
-   	* compress.c: Include stdlib.h and compress.h.
-   	(rcsid): Delete.
-   	(report_str_error): Make static.
-   	(ez_inflate_str): Delete unused variable.  Add parens in if-stmt.
-   	(hrd_inflate_str): Likewise.
-
-   	* compress.h (init_compression, end_compression, init_inflation,
-   	end_inflation): Prototype void arguments.
-
-   	* dostime.c (rcsid): Delete.
-
-   	* jargrep.c: Include ctype.h, stdlib.h, zlib.h and compress.h.
-   	Make functions static.  Cast ctype function argument to `unsigned
-   	char'.  Add parens in if-stmts.  Constify.
-   	(Usage): Change into a macro.
-   	(jargrep): Remove unused parameter.
-
-   	* jartool.c: Constify.  Add parens in if-stmts.  Align
-   	signed/unsigned char pointers in functions calls using casts.
-   	(rcsid): Delete.
-   	(list_jar): Fix printf format specifier.
-   	(usage): Chop long string into bits.  Reformat.
-
-   	* pushback.c (rcsid): Delete.
-
-   Revision 1.1  2000/12/09 03:08:23  apbianco
-   2000-12-08  Alexandre Petit-Bianco  <apbianco@cygnus.com>
-
-           * fastjar: Imported.
-
-   Revision 1.7  2000/09/13 14:02:02  cory
-   Reformatted some of the code to more closly match the layout of the orriginal
-   fastjar utility.
-
-   Revision 1.6  2000/09/12 22:29:36  cory
-   Jargrep now seems to do what I want it to do.  Performs properly on Linux x86,
-   will test some other platforms later.
-
-   Revision 1.1.1.1  1999/12/06 03:09:16  toast
-   initial checkin..
-
-
-
-   Revision 1.7  1999/05/10 08:50:05  burnsbr
-   *** empty log message ***
-
-   Revision 1.6  1999/05/10 08:38:44  burnsbr
-   *** empty log message ***
-
-   Revision 1.5  1999/05/10 08:30:29  burnsbr
-   added inflation code
-
-   Revision 1.4  1999/04/27 10:03:33  burnsbr
-   added configure support
-
-   Revision 1.3  1999/04/26 02:35:32  burnsbr
-   compression now works.. yahoo
-
-   Revision 1.2  1999/04/23 12:01:59  burnsbr
-   added licence stuff.
-
-   Revision 1.1  1999/04/23 11:58:25  burnsbr
-   Initial revision
-
-
-*/
-
 /*
   compress.c - code for handling deflation
   Copyright (C) 1999  Bryan Burns
