@@ -22,86 +22,6 @@
   Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */
 
-/* Id: jargrep.c,v 1.5 2002/01/03 04:57:56 rodrigc Exp
-
-Log: jargrep.c,v 
-Revision 1.5  2002/01/03 04:57:56  rodrigc
-2001-01-02  Craig Rodrigues  <rodrigc@gcc.gnu.org>
-
-        PR bootstrap/5117
-        * configure.in (AC_CHECK_HEADERS): Check for stdlib.h.
-        * Makefile.am: Move grepjar to bin_PROGRAMS.
-        * config.h.in: Regenerated.
-        * Makefile.in: Regenerated.
-        * aclocal.m4: Regenerated.
-        * jargrep.c: Eliminate some signed/unsigned and default
-        uninitialized warnings. Use HAVE_STDLIB_H instead of
-        STDC_HEADERS macro.
-        * jartool.c: Likewise.
-        * compress.c: Likewise.
-
-Revision 1.4  2000/12/15 18:45:09  tromey
-	* jargrep.c: Include getopt.h if it exists.
-	(optind): Declare.
-	* configure, config.h: Rebuilt.
-	* configure.in: Check for getopt.h.
-
-Revision 1.3  2000/12/14 18:45:35  ghazi
-Warning fixes:
-
-	* compress.c: Include stdlib.h and compress.h.
-	(rcsid): Delete.
-	(report_str_error): Make static.
-	(ez_inflate_str): Delete unused variable.  Add parens in if-stmt.
-	(hrd_inflate_str): Likewise.
-
-	* compress.h (init_compression, end_compression, init_inflation,
-	end_inflation): Prototype void arguments.
-
-	* dostime.c (rcsid): Delete.
-
-	* jargrep.c: Include ctype.h, stdlib.h, zlib.h and compress.h.
-	Make functions static.  Cast ctype function argument to `unsigned
-	char'.  Add parens in if-stmts.  Constify.
-	(Usage): Change into a macro.
-	(jargrep): Remove unused parameter.
-
-	* jartool.c: Constify.  Add parens in if-stmts.  Align
-	signed/unsigned char pointers in functions calls using casts.
-	(rcsid): Delete.
-	(list_jar): Fix printf format specifier.
-	(usage): Chop long string into bits.  Reformat.
-
-	* pushback.c (rcsid): Delete.
-
-Revision 1.2  2000/12/11 02:59:55  apbianco
-2000-12-10  Robert Lipe <robertlipe@usa.net>
-
-	* jargrep.c (jargrep): Added null statement after case.
-
-2000-12-10  Alexandre Petit-Bianco  <apbianco@cygnus.com>
-
-	* Makefile: Removed.
-	* Makefile.in: Rebuilt with `-i' and `--enable-foreign'.
-
-(http://gcc.gnu.org/ml/gcc/2000-12/msg00294.html)
-
-Revision 1.1  2000/12/09 03:08:23  apbianco
-2000-12-08  Alexandre Petit-Bianco  <apbianco@cygnus.com>
-
-        * fastjar: Imported.
-
-Revision 1.8  2000/09/13 14:02:02  cory
-Reformatted some of the code to more closly match the layout of the orriginal
-fastjar utility.
-
-Revision 1.7  2000/09/12 22:29:36  cory
-Jargrep now seems to do what I want it to do.  Performs properly on Linux x86,
-will test some other platforms later.
-
-
-*/
-
 #include "config.h"
 #include <stdio.h>
 #include <unistd.h>
