@@ -18,178 +18,6 @@
   Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */
 
-/*
-   Revision 1.10  2002/01/03 04:57:56  rodrigc
-   2001-01-02  Craig Rodrigues  <rodrigc@gcc.gnu.org>
-
-           PR bootstrap/5117
-           * configure.in (AC_CHECK_HEADERS): Check for stdlib.h.
-           * Makefile.am: Move grepjar to bin_PROGRAMS.
-           * config.h.in: Regenerated.
-           * Makefile.in: Regenerated.
-           * aclocal.m4: Regenerated.
-           * jargrep.c: Eliminate some signed/unsigned and default
-           uninitialized warnings. Use HAVE_STDLIB_H instead of
-           STDC_HEADERS macro.
-           * jartool.c: Likewise.
-           * compress.c: Likewise.
-
-   Revision 1.9  2001/10/12 00:49:42  bryce
-           * jatool.c (extract_jar): Account for null termination when
-   	determining whether to expand "filename".
-
-   Revision 1.8  2001/08/29 01:35:31  apbianco
-   2001-08-28  Alexandre Petit-Bianco  <apbianco@redhat.com>
-
-   	* jartool.c (add_to_jar): Return 1 if `stat' initialy failed.
-   	Fixes PR java/3949.
-
-   (http://gcc.gnu.org/ml/gcc-patches/2001-08/msg01641.html)
-
-   Revision 1.7  2001/08/27 23:09:37  tromey
-   	* jartool.c (jarfile): Remove length limitation.
-   	(main): Use jt_strdup when initializing jarfile.
-
-   Revision 1.6  2001/07/04 18:33:53  tromey
-   	Modified from patch by Julian Hall <jules@acris.co.uk>:
-   	* jartool.c (errno): Conditionally declare.
-   	(O_BINARY): Conditionally define.
-   	(main): Use open, not creat.  Use O_BINARY everywhere.
-   	(make_manifest): Use O_BINARY.
-   	(add_to_jar): Likewise.
-
-   Revision 1.5  2001/05/03 21:40:47  danglin
-   	* jartool.c (jt_strdup): New function.
-   	(get_next_arg): Use jt_strdup instead of strdup.
-
-   Revision 1.4  2000/12/28 21:47:37  robertl
-   2000-12-28  Robert Lipe <robertl@sco.com>
-
-           * jartool.c (MAXPATHLEN): Provide if not defined.
-
-   Revision 1.3  2000/12/14 18:45:35  ghazi
-   Warning fixes:
-
-   	* compress.c: Include stdlib.h and compress.h.
-   	(rcsid): Delete.
-   	(report_str_error): Make static.
-   	(ez_inflate_str): Delete unused variable.  Add parens in if-stmt.
-   	(hrd_inflate_str): Likewise.
-
-   	* compress.h (init_compression, end_compression, init_inflation,
-   	end_inflation): Prototype void arguments.
-
-   	* dostime.c (rcsid): Delete.
-
-   	* jargrep.c: Include ctype.h, stdlib.h, zlib.h and compress.h.
-   	Make functions static.  Cast ctype function argument to `unsigned
-   	char'.  Add parens in if-stmts.  Constify.
-   	(Usage): Change into a macro.
-   	(jargrep): Remove unused parameter.
-
-   	* jartool.c: Constify.  Add parens in if-stmts.  Align
-   	signed/unsigned char pointers in functions calls using casts.
-   	(rcsid): Delete.
-   	(list_jar): Fix printf format specifier.
-   	(usage): Chop long string into bits.  Reformat.
-
-   	* pushback.c (rcsid): Delete.
-
-   Revision 1.2  2000/12/13 18:11:57  tromey
-   	* jartool.c (extract_jar): Use strchr, not index.
-
-   Revision 1.1  2000/12/09 03:08:23  apbianco
-   2000-12-08  Alexandre Petit-Bianco  <apbianco@cygnus.com>
-
-           * fastjar: Imported.
-
-   Revision 1.5  2000/08/24 15:01:27  cory
-   Made certain that fastjar opened the jar file before trying to update it
-   with the -u option.
-
-   Revision 1.4  2000/08/24 13:39:21  cory
-   Changed +'s to |'s in jartool.c to insure there was no confusion with sign
-   when byte swapping.  Better safe than sorry.
-
-   Revision 1.3  2000/08/23 19:42:17  cory
-   Added support for more Unix platforms.  The following code has been hacked
-   to work on AIX, Solaris, True 64, and HP-UX.
-   Added bigendian check.  Probably works on most big and little endian platforms
-   now.
-
-   Revision 1.2  1999/12/06 07:38:28  toast
-   fixed recursive archiving bug
-
-   Revision 1.1.1.1  1999/12/06 03:09:34  toast
-   initial checkin..
-
-
-
-   Revision 1.22  1999/10/12 19:45:13  burnsbr
-   adding patch to fix compat problem
-
-   Revision 1.21  1999/05/10 09:15:49  burnsbr
-   fixed manifest file version info
-
-   Revision 1.20  1999/05/10 08:53:16  burnsbr
-   *** empty log message ***
-
-   Revision 1.19  1999/05/10 08:30:39  burnsbr
-   added extract / listing code
-
-   Revision 1.18  1999/04/28 04:24:29  burnsbr
-   updated version
-
-   Revision 1.17  1999/04/28 04:21:23  burnsbr
-   added support for -C dir-changing flag.. Updated total compression display
-
-   Revision 1.16  1999/04/27 10:28:22  burnsbr
-   updated version string
-
-   Revision 1.15  1999/04/27 10:04:06  burnsbr
-   configure support
-
-   Revision 1.14  1999/04/27 08:56:14  burnsbr
-   added -V flag, better error messages
-
-   Revision 1.13  1999/04/26 02:35:21  burnsbr
-   changed all sorts of stuff.. compression now works 100%
-
-   Revision 1.12  1999/04/23 12:00:45  burnsbr
-   90% done with compression code
-
-   Revision 1.11  1999/04/22 04:12:57  burnsbr
-   finished first round of Manifest file support..
-   might need to do more, digest etc..
-
-   Revision 1.10  1999/04/22 02:35:23  burnsbr
-   added more manifest support, about 75% done now.  Replaced all the
-   redundant shifts and bit-logic with a macro or two, making the code
-   easier to read.
-
-   Revision 1.9  1999/04/21 09:55:16  burnsbr
-   pulled out printfs
-
-   Revision 1.8  1999/04/21 02:58:01  burnsbr
-   started manifest code
-
-   Revision 1.7  1999/04/20 23:15:28  burnsbr
-   added patch sent by John Bley <jbb6@acpub.duke.edu>
-
-   Revision 1.6  1999/04/20 08:56:02  burnsbr
-   added GPL comment
-
-   Revision 1.5  1999/04/20 08:16:09  burnsbr
-   fixed verbose flag, did some optimization
-
-   Revision 1.4  1999/04/20 05:09:59  burnsbr
-   added rcsid variable
-
-   Revision 1.3  1999/04/20 05:08:54  burnsbr
-   fixed Log statement
-
-*/
-
 #include "config.h"
 
 #include <zlib.h>
