@@ -1,58 +1,3 @@
-/* $Id: pushback.c,v 1.1 2006/04/17 18:44:35 tromey Exp $
-
-   $Log: pushback.c,v $
-   Revision 1.1  2006/04/17 18:44:35  tromey
-   Initial revision
-
-   Revision 1.2  2000/12/14 18:45:35  ghazi
-   Warning fixes:
-
-   	* compress.c: Include stdlib.h and compress.h.
-   	(rcsid): Delete.
-   	(report_str_error): Make static.
-   	(ez_inflate_str): Delete unused variable.  Add parens in if-stmt.
-   	(hrd_inflate_str): Likewise.
-
-   	* compress.h (init_compression, end_compression, init_inflation,
-   	end_inflation): Prototype void arguments.
-
-   	* dostime.c (rcsid): Delete.
-
-   	* jargrep.c: Include ctype.h, stdlib.h, zlib.h and compress.h.
-   	Make functions static.  Cast ctype function argument to `unsigned
-   	char'.  Add parens in if-stmts.  Constify.
-   	(Usage): Change into a macro.
-   	(jargrep): Remove unused parameter.
-
-   	* jartool.c: Constify.  Add parens in if-stmts.  Align
-   	signed/unsigned char pointers in functions calls using casts.
-   	(rcsid): Delete.
-   	(list_jar): Fix printf format specifier.
-   	(usage): Chop long string into bits.  Reformat.
-
-   	* pushback.c (rcsid): Delete.
-
-   Revision 1.1  2000/12/09 03:08:23  apbianco
-   2000-12-08  Alexandre Petit-Bianco  <apbianco@cygnus.com>
-
-           * fastjar: Imported.
-
-   Revision 1.2  2000/08/23 19:42:17  cory
-   Added support for more Unix platforms.  The following code has been hacked
-   to work on AIX, Solaris, True 64, and HP-UX.
-   Added bigendian check.  Probably works on most big and little endian platforms
-   now.
-
-   Revision 1.1.1.1  1999/12/06 03:09:13  toast
-   initial checkin..
-
-
-
-   Revision 1.1  1999/05/10 08:32:37  burnsbr
-   Initial revision
-
-*/
-
 /*
   pushback.c - code for a pushback buffer to handle file I/O
   Copyright (C) 1999  Bryan Burns
